# unitree_ros2

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml  error_phuc.txt  force_output.txt  joint_trajectory.csv  joint_trajectory.npy  mechanism.ipynb
docs/: unitree_gazebo_call_flow.md
skiing_test/: a1.urdf  lifting.json  lifting_vel.json  load_config.cpp  mpc.hpp  mpc_node.py  mpc_skiing.cpp  pushing.json  pushing_vel.json  robot_description.yaml  test_0605.py  test_new.py  test_original_0705.py  test_skiing.py
skiing_test/oop_skiing/: a1.urdf  animation.py  com_transfering.py  config_skate_board.py  kinematics.py  lifting_vel.json  main.py  mpc_controller.py  q0_FR_on_board.json  robot_model.py
trajectory_gen/: package.xml  setup.cfg  setup.py
trajectory_gen/trajectory_gen/: new_3004.py  transfer_joint.py
unitree_controller/: CMakeLists.txt  package.xml
unitree_controller/config/: a1_controllers.yaml  a1_gazebo_controllers.yaml  a1_mujoco_controllers.yaml  joint_trajectory.json  lifting.json  lifting_down.json  lifting_down_vel.json  lifting_up.json  lifting_up_vel.json  lifting_vel.json  onboard_legs.json  onboard_legs_lean_inter.json  onboard_sitting.json  pushing.json  pushing_vel.json  q_sol_FR.json  trajectory_movebody_1.json  trajectory_movebody_1_back.json  trajectory_movebody_1_center.json  trajectory_movebody_2.json  trajectory_moveleg.json  trajectory_moveleg_vel.json
unitree_controller/include/unitree_controller/: mpc_start_push.hpp  mpc_turning.hpp  types.hpp  unitree_controller.hpp
unitree_controller/launch/: a1_mujoco.launch.py  unitree.launch.py  unitree_gazebo.launch.py  unitree_mujoco.launch.py
unitree_controller/script/: install_requirement.sh
unitree_controller/src/: mpc_start_push.cpp  mpc_turning.cpp  pd_controller.cpp  test.cpp  unitree_controller.cpp  unitree_controller_interface.cpp
unitree_description/a1_description/: CMakeLists.txt  package.xml
unitree_description/a1_description/config/: robot_control.yaml
unitree_description/a1_description/launch/: a1.launch.py
unitree_description/a1_description/plugin/: foot_contact_plugin.cc
unitree_description/a1_description/urdf/: a1.urdf
unitree_description/a1_description/xacro/: const.xacro  gazebo.xacro  materials.xacro  robot.xacro
unitree_description/install/: local_setup.sh  setup.sh
unitree_description/install/a1_description/share/a1_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
unitree_description/install/a1_description/share/a1_description/cmake/: a1_descriptionConfig-version.cmake  a1_descriptionConfig.cmake
unitree_description/install/a1_description/share/a1_description/environment/: ament_prefix_path.dsv  path.dsv
unitree_description/install/a1_description/share/a1_description/launch/: a1.launch.py  a1.rviz  a1_urdf.launch.py
unitree_description/install/a1_description/share/a1_description/meshes/: calf.dae  hip.dae  thigh.dae  thigh_mirror.dae  trunk.dae
unitree_description/install/a1_description/share/a1_description/urdf/: a1.urdf
unitree_description/install/a1_description/share/a1_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  materials.xacro  robot.xacro  ros2_control.xacro  stairs.xacro  transmission.xacro
unitree_description/install/a1_description/share/ament_index/resource_index/package_run_dependencies/: a1_description
unitree_description/install/a1_description/share/ament_index/resource_index/parent_prefix_path/: a1_description
unitree_description/log/: latest_build
unitree_gazebo/: CMakeLists.txt  unitree_gazebo_call_flow.md
unitree_gazebo/launch/: gazebo_launch.py
unitree_hardware/: CMakeLists.txt
unitree_hardware/include/unitree_hardware/: unitree_hardware.hpp
unitree_hardware/include/unitree_legged_sdk/: comm.h  lcm_server.h  loop.h  unitree_joystick.h
unitree_hardware/src/: unitree_hardware.cpp
unitree_msgs/: CMakeLists.txt
unitree_msgs/msg/: Commands.msg  States.msg
unitree_mujoco/: CMakeLists.txt  package.xml  unitree_hardware_aida_plugin.xml  unitree_mujoco_aida_plugin.xml
unitree_mujoco/include/unitree_hardware/: mujoco_interface_type_values.hpp  unitree_mujoco.hpp
unitree_mujoco/include/unitree_mujoco/: mujoco_system_interface.hpp  unitree_mujoco.hpp  unitree_mujoco_system.hpp  visibility_control.h
unitree_mujoco/src/: bridge_plugin.cpp  ros2_mujoco_bridge.cpp  unitree_hardware.cpp  unitree_mujoco.cpp
unitree_teleop/: setup.cfg
