<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="katayama.25w@st.kyoto-u.ac.jp">Sotaro Katayama</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_hardware</depend>
  <depend>unitree_msgs</depend>

  <depend>nlohmann_json</depend>
  <depend>ament_index_cpp</depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>

  <exec_depend>unitree_gazebo</exec_depend>
  <depend>gazebo_ros2_control</depend>
  <exec_depend>gazebo_ros</exec_depend>

  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>unitree_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>